working on method reference, added return type to class symbol scanner, problematic